--- a/KeoghsCheckoutTest/KeoghsCheckoutTest.csproj
+++ b/KeoghsCheckoutTest/KeoghsCheckoutTest.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KeoghsCheckout\KeoghsCheckout.csproj" />
+  </ItemGroup>
 </Project>
